--- a/src/components/TodoApp/TodoApp.css
+++ b/src/components/TodoApp/TodoApp.css
@@ -1,57 +1,88 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-    margin: 0;
-    background-color: #056679;
-    font-family: sans-serif;
-  }
-  .todo-container {
-    width: 350px;
-    text-align: center;
-    margin: auto;
-    margin-top: 30px;
-  }
-  h1 {
-    margin: 0;
-    margin-bottom: 15px;
-    color: #0c7588;
-  }
-  .input-section {
-    background-color: #055565;
-    padding: 18px;
-    border-radius: 10px;
-    box-shadow: 0 7px 6px #0000003b;
-  }
-  .input-section input {
-    border-radius: 5px;
-    border: 1px solid #106879;
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    background-color: #055565;
-    outline: none;
-    color: #08869e;
-  }
-  input::-webkit-input-placeholder {
-    color: #08869e;
-  }
-  
-  ul {
-    text-align: left;
-    padding: 0;
-  }
-  
-  ul li {
-    list-style: none;
-    background-color: #055565;
-    padding: 15px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    color: #08869e;
-    box-shadow: 0 4px 6px #00000066;
-    display: flex;
-  }
-  ul li div {
-    text-align: right;
-    flex: 1;
-    cursor: pointer;
-    letter-spacing: 10px;
-  }
+  background-color: #020631;
+}
+
+.app {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+}
+
+.app .mainHeading h1 {
+  text-align: center;
+}
+
+.app h1,
+h2 {
+  color: white;
+}
+
+.app .input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.app .input {
+  margin-top: 0.8em;
+  width: 20em;
+  height: 2em;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 6px;
+  padding: 5px;
+}
+
+.app .input input {
+  width: 100%;
+  height: 1.6em;
+  border-color: transparent;
+  outline-color: transparent;
+}
+
+.app i {
+  cursor: pointer;
+  font-size: larger;
+  font-weight: 900;
+  color: grey;
+  margin-right: 5px;
+}
+.app .todos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.app .todos .todo {
+  margin-top: 0.8em;
+  width: 20em;
+  height: 2em;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 6px;
+  padding: 5px;
+}
+.app .todos .todo .left {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.app .todos .todo .left p {
+  margin-left: 3px;
+  font-size: medium;
+  font-weight: 700;
+  font-style: normal;
+  color: grey;
+}
+
